--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,7 @@ jobs:
       - name: Install Nix ❄️
         uses: cachix/install-nix-action@v26
 
-      - name: Set up Cachix ♻️
-        uses: cachix/cachix-action@v14
-        with:
-          name: 1lab
-          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Check that imports are sorted
         if: github.event_name == 'pull_request'
