add 1lab cachix

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,10 @@ jobs:
 
       - name: Install Nix ❄️
         uses: cachix/install-nix-action@v26
+        with:
+          extra_nix_config: |
+            extra-substituters = https://1lab.cachix.org
+            extra-trusted-public-keys = 1lab.cachix.org-1:eYjd9F9RfibulS4OSFBYeaTMxWojPYLyMqgJHDvG1fs=
 
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
