--- a/crowdin.yml
+++ b/crowdin.yml
@@ -5,5 +5,5 @@ base_path: .
 preserve_hierarchy: true
 
 files:
-- source: src/**/*.md
+- source: src/**/*
   translation: src-%two_letters_code%/**/%original_file_name%
